2007-02-03  Andreas Røsdal  <andreasr@gnome.org>

	* properties.c: Cheating was possible while the preferences dialog
	is open. Patch from Thomas Andersen in Bug #403421.

2007-02-02  Robert Ancell  <robert.ancell@gmail.com>

	* gnobots2.schemas.in: Change key owners from glines to gnobots2 (Bug #403426)

2006-10-28  Andreas Røsdal  <andrearo@stud.ntnu.no>

	* game.c: Close Bug #Bug 353303: safe_teleport_available function
	is confusing GAME_WIDTH with GAME_HEIGHT.

2006-08-03 Jason Clinton <me@jasonclinton.com>

	* help/C/gnobots2-C.omf:
	* help/C/gnobots2.xml: remove references to Linux to avoid RMS flamewar

2006-07-10 Jason Clinton <me@jasonclinton.com>

	* Makefile.am: fix up reference to deleted README

2006-06-21  Andreas Røsdal  <andrearo@stud.ntnu.no>

	* menu.c:
	* menu.h: 
	* gnobots.c: Add fullscreen mode.


2006-06-15  Richard Hoelscher  <rah@rahga.com>

	* README: Unusued, removed.

2006-05-19  Callum McKenzie  <callum@spooky-possum.org>

	* gnobots2.desktop.in (Icon): Really fix the icon name this time.

2006-05-11  Callum McKenzie  <callum@spooky-possum.org>

	* gnobots2.desktop.in (Icon): Use the correct icon name. See bug
	#341245.

2006-04-23  Callum McKenzie  <callum@spooky-possum.org>

	* boo.svg: 
	* ufo.svg:
	* robots.svg: Remove the opaque backgrounds.

2006-04-22  Callum McKenzie  <callum@spooky-possum.org>
	
	* gnobots.c:
	* graphics.h:
	* graphics.c: Add a checkered background. Draw it explicitly
	rather than setting the window background. As a side-effect
	converted draw_tile_pixmap from pixel to grid coordinates.

	* gnobots.c:
	* graphics.c:
	* graphics.h:
	* properties.h:
	* properties.c: Load only one set of graphics at a time. Use
	GamesFileList to create the list of themes. Allow all image 
	formats to be used (including SVG, but also, unfortunately, the 
	bubble-graphics).

	* ufo.svg:
	* robots.svg:
	* boo.svg:
	* Makefile.am: Add Nicu's SVG themes.

2006-04-20  Callum McKenzie  <callum@spooky-possum.org>
