@@ -7,6 +7,7 @@
 /**********************************************************************/
 extern GtkWidget *app;
 extern GtkWidget *game_area;
+extern GamesScores *highscores;
 /**********************************************************************/
 
 
